@@ -22,13 +22,16 @@
  */
 package org.openjdk.bench.javax.crypto.full;
 
+import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
 
+import java.security.GeneralSecurityException;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
+import java.security.Provider;
 
 public class KeyPairGeneratorBench extends CryptoBase {
 
@@ -45,8 +48,18 @@ public class KeyPairGeneratorBench extends CryptoBase {
         setupProvider();
         generator = (prov == null) ? KeyPairGenerator.getInstance(algorithm)
                                 : KeyPairGenerator.getInstance(algorithm, prov);
-        if (keyLength > 0) { // not all key pair generators allow the use of key length
+        // not all key pair generators allow the use of key length
+        if (keyLength > 0) {
             generator.initialize(keyLength);
+        }
+    }
+
+    private static Provider getInternalJce() {
+        try {
+            Class<?> dhClazz = Class.forName("sun.security.ssl.HybridProvider");
+            return (Provider) dhClazz.getField("PROVIDER").get(null);
+        } catch (ReflectiveOperationException exc) {
+            throw new RuntimeException(exc);
         }
     }
 
@@ -118,4 +131,23 @@ public class KeyPairGeneratorBench extends CryptoBase {
         private int keyLength;
     }
 
+    @Fork(value = 5, jvmArgs = {"-XX:+AlwaysPreTouch", "--add-opens",
+            "java.base/sun.security.ssl=ALL-UNNAMED"})
+    public static class JSSE_Hybrid extends KeyPairGeneratorBench {
+        @Setup
+        public void init() {
+            try {
+                prov = getInternalJce();
+                super.setup();
+            } catch (GeneralSecurityException gse) {
+                throw new RuntimeException(gse);
+            }
+        }
+
+        @Param({"X25519MLKEM768", "SecP256r1MLKEM768", "SecP384r1MLKEM1024"})
+        private String algorithm;
+
+        @Param({"0"})       // Hybrid KPGs don't need key lengths
+        private int keyLength;
+    }
 }
